Implemented dialog views; cleaned up UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">EKG-Android</string>
+    <string-array name="labels">
+        <item> None (Discard) </item>
+        <item>N (Normal) </item>
+        <item>A (Atrial) </item>
+        <item>V (Ventricular) </item>
+    </string-array>
 </resources>
