--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">EKG-Android</string>
+    <string name="channel_name">ekg-android-channel</string>
+    <string name="channel_description">EKG Wearable Notifications</string>
     <string-array name="comparators">
         <item>Is-Greater-Than </item>
         <item>Is-Less-Than </item>
