--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EKG-Android</string>
+    <string name="app_name">My EKG</string>
     <string name="channel_name">ekg-android-channel</string>
     <string name="channel_description">EKG Wearable Notifications</string>
     <string-array name="comparators">
